--- a/frontend/web/templates/base.html
+++ b/frontend/web/templates/base.html
@@ -95,6 +95,8 @@
 
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    {% block scripts %}
+    {% endblock %}
 </body>
 
 </html>
